--- a/appstate.json
+++ b/appstate.json
@@ -1,7 +1,128 @@
-....
-
-
-        𝐚dd 𝐲𝐨𝐮𝐫 𝐜𝟑𝐜 𝐅𝐛𝐬𝐭𝐚𝐭𝐞 𝐜𝐨𝐨𝐤𝐢𝐞 🍪
-
-
-.....
+[
+    {
+        "key": "dbln",
+        "value": "%7B%2261577905610336%22%3A%22U2HmBlcU%22%7D",
+        "domain": "facebook.com",
+        "path": "/login/device-based/",
+        "hostOnly": false,
+        "creation": "2025-06-22T06:47:54.694Z",
+        "lastAccessed": "2025-06-22T06:47:54.698Z"
+    },
+    {
+        "key": "datr",
+        "value": "dqJXaH6DCEx4JIYwkrBZLKi_",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-06-22T06:47:54.698Z",
+        "lastAccessed": "2025-06-22T06:47:54.698Z"
+    },
+    {
+        "key": "sb",
+        "value": "dqJXaMQdjbXdKXx75AIebS_e",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-06-22T06:47:54.698Z",
+        "lastAccessed": "2025-06-22T06:47:54.698Z"
+    },
+    {
+        "key": "m_pixel_ratio",
+        "value": "1.4347375631332397",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-06-22T06:47:54.698Z",
+        "lastAccessed": "2025-06-22T06:47:54.698Z"
+    },
+    {
+        "key": "wd",
+        "value": "427x949",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-06-22T06:47:54.698Z",
+        "lastAccessed": "2025-06-22T06:47:54.698Z"
+    },
+    {
+        "key": "c_user",
+        "value": "61577905610336",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-06-22T06:47:54.698Z",
+        "lastAccessed": "2025-06-22T06:47:54.698Z"
+    },
+    {
+        "key": "xs",
+        "value": "42%3AcwcVdopDNKAG1g%3A2%3A1750573705%3A-1%3A-1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-06-22T06:47:54.698Z",
+        "lastAccessed": "2025-06-22T06:47:54.698Z"
+    },
+    {
+        "key": "fr",
+        "value": "0IQUHId4hw764ZpGG.AWfwKS5ocNZsgOBf5C3MAb1iu6wtuB1M1Q58pVBu3aeAtH-wFyI.BoV6J2..AAA.0.0.BoV6KP.AWdfmQHj2q9oa9sCKTxqYfikqW8",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-06-22T06:47:54.698Z",
+        "lastAccessed": "2025-06-22T06:47:54.698Z"
+    },
+    {
+        "key": "locale",
+        "value": "en_GB",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-06-22T06:47:54.698Z",
+        "lastAccessed": "2025-06-22T06:47:54.698Z"
+    },
+    {
+        "key": "ps_l",
+        "value": "1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-06-22T06:47:54.698Z",
+        "lastAccessed": "2025-06-22T06:47:54.698Z"
+    },
+    {
+        "key": "ps_n",
+        "value": "1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-06-22T06:47:54.698Z",
+        "lastAccessed": "2025-06-22T06:47:54.698Z"
+    },
+    {
+        "key": "wl_cbv",
+        "value": "v2%3Bclient_version%3A2850%3Btimestamp%3A1750573711",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-06-22T06:47:54.698Z",
+        "lastAccessed": "2025-06-22T06:47:54.698Z"
+    },
+    {
+        "key": "fbl_st",
+        "value": "101538709%3BT%3A29176228",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-06-22T06:47:54.698Z",
+        "lastAccessed": "2025-06-22T06:47:54.698Z"
+    },
+    {
+        "key": "vpd",
+        "value": "v1%3B839x427x1.4347375631332397",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-06-22T06:47:54.698Z",
+        "lastAccessed": "2025-06-22T06:47:54.698Z"
+    }
+            ]
